--- a/package.json
+++ b/package.json
@@ -2,18 +2,26 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "rss reader",
-  "main": "index.js",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Deim-Sha/frontend-project-lvl3.git"
   },
-  "author": "",
+  "author": "Deim-Sha",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Deim-Sha/frontend-project-lvl3/issues"
   },
-  "homepage": "https://github.com/Deim-Sha/frontend-project-lvl3#readme"
+  "homepage": "https://github.com/Deim-Sha/frontend-project-lvl3#readme",
+  "devDependencies": {
+    "eslint": "^8.22.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
+  }
 }
